# qtunnel

./: .gitignore  ARCHITECTURE_REDESIGN_STATUS.md  ASYNC_DNS_IMPLEMENTATION.md  CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS.md  REACTOR_IMPROVEMENTS_COMPLETE.md  README.md  WINDOWS_COMPATIBILITY_FIXES.md  test_aggressive_load.sh  test_chrome_direct.sh  test_chrome_real_browser.py  test_detailed_connect.py  test_echo_tunnel.py  test_final_assessment.py  test_google_debug.py  test_google_repeat.py  test_handshake_debug.py  test_headless_browser.py  test_load_stress.py  test_load_with_timing.sh  test_real_chrome_stress.py  test_selenium_real_browser.py  test_selenium_stress.py  test_simple_connect.py  test_simple_echo.py  test_specific_sites.py  test_stable_google.py  test_stress_concurrent.sh  test_tls_handshake.py  test_tunnel_reuse.py  trace_google.py
cmake/: generate_homepage_header.cmake
src/: client.cpp  code.html  dns_resolver.cpp  dns_resolver.h  http2_session_driver.cpp  http2_session_driver.h  server.cpp  server_connection.cpp  server_connection.h  server_shared.h  tunnel_connection.cpp  upstream_peer.cpp  upstream_peer.h
src/common/: buffer_pool.cpp  buffer_pool.h  logging.h  obfuscator.h  reactor.cpp  reactor.h  socks5.h  tls_wrapper.h  tunnel_protocol.h
test/: README.md  TEST_REFACTORING.md  diagnose.sh  run_test.sh  simple_test.sh  test.sh  test_async_dns.sh  test_common.sh  test_dns_resolver.cpp  test_local_dns.sh  verify_cleanup.sh
test/certs/: server.crt  server.key
test/legacy/: quick_test.sh
test/results/: result_20260406_155331.txt  result_20260408_104322_single.txt  result_20260408_105549_single.txt
